@@ -576,7 +576,6 @@ webui.feed.item.description = dc.title, dc.contributor.author, \
 							  dc.contributor.editor, dc.description.abstract, \
 							  dc.description
 
-
 #### Item Recommendation Settings #####
 # show a link to the item recommendation page from item display page
 webui.suggest.enable = false
@@ -584,6 +583,12 @@ webui.suggest.enable = false
 webui.suggest.sender = A DSpace user
 # default name of recipient - replaced by user input if present
 webui.suggest.recipient = colleague
+
+#### Author and subject links ####
+# link author names back to browse-by-author (if not set, defaults to true)
+webui.authorlinks.enable = true
+# link subjects back to browse-by-subject (if not set, defaults to false)
+webui.subjectlinks.enable = false
 
 
 #### Controlled Vocabulary Settings #####
